Added RFPathLoss calc
As freepath loss is the main factor in satellite comm/handshakes,
so added calculation for same.

--- a/MyAmSatInStem.ipynb
+++ b/MyAmSatInStem.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "In turn use a simple mechanism to transmit the sensor data like\n",
     "\n",
-    "a) Blind Analog frequency modulation: Different frequencies for different values\n",
+    "a) Simple Analog frequency modulation: Different frequencies for different values\n",
     "\n",
     "b) Analog frequency modulated tones for different decimal digits from 0 to 9, maybe each 200 Hz appart.\n",
     "\n",
@@ -37,7 +37,9 @@
     "\n",
     "* if it is 90 degrees, then the satellite could be placed always in day light, so that solar power is always available. However one needs to verify if the temperature of the satellite parts can be maintained well within reasonable operating range, in this case. Is the attitude maintaining rotation good enough or not or conductive heat distribution pipes/paths good enough or ...\n",
     "\n",
-    "* if it is 0 degrees, then the satellite would be always at around roughly mid day or mid night wrt the places on earth, depending on which side of the earth wrt sun, that place is.\n"
+    "* if it is 0 degrees, then the satellite would be always at around roughly mid day or mid night wrt the places on earth, depending on which side of the earth wrt sun, that place is.\n",
+    "\n",
+    "The satellite may pass over a given ground location between 0 to 2 times under normal conditions for a polar sun synchronous orbit. Ideally this would be twice if the satellite (and its RF system) covers all parts of the earth fully in a day.\n"
    ]
   },
   {
@@ -51,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +125,7 @@
        "103.36593937566968"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,25 +167,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "EarthCoverageRadius[@106]:[  265408.96432408   663522.4108102   1327044.82162041 47773613.57833476]\n"
+      "EarthCoverageRadius[@60]:[  115470.05383793   288675.13459481   577350.26918963 20784609.69082653]\n",
+      "Minimum number of orbits required to cover earths equatorial circumference fully: [87.06236948 34.82494779 17.4124739   0.48367983]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([37.87775789, 15.15110315,  7.57555158,  0.21043199])"
-      ]
-     },
-     "execution_count": 104,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -197,13 +190,15 @@
     "# Angle = FieldOfView\n",
     "iSatAltitude = numpy.array([200_000, 500_000, 1_000_000, 36_000_000])\n",
     "iFieldOfView = 106 # Adjusted to sync NumOfSiteings with EarthCircumference given EarthCoverage Radius @500KM\n",
+    "iFieldOfView = 60\n",
     "iEarthCoverageRadius = numpy.tan(((iFieldOfView/2)/360)*math.pi*2)*iSatAltitude\n",
     "print(\"EarthCoverageRadius[@{}]:{}\".format(iFieldOfView, iEarthCoverageRadius))\n",
     "math.atan(iEarthRadius/(iEarthRadius+36_000_000)) * (360/(math.pi*2))\n",
     "math.atan(iEarthRadius/(iEarthRadius+500_000)) * (360/(math.pi*2))\n",
     "\n",
     "# Minimum number of orbits to cover the earths equatorial circumference\n",
-    "iEarthCircumference/(iEarthCoverageRadius*2*2)"
+    "iMinNumOfOrbits4Equator=iEarthCircumference/(iEarthCoverageRadius*2*2)\n",
+    "print(\"Minimum number of orbits required to cover earths equatorial circumference fully:\", iMinNumOfOrbits4Equator)"
    ]
   },
   {
@@ -227,7 +222,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Eclipse due to earth"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -246,6 +255,99 @@
     "iMaxEclipseTime = iHalfOfEarthToLeoCircumference * iLeoOrbitTimeTaken\n",
     "print(\"Satellite could be Eclipsed by Earth for a max of {} mins per Orbit\".format(iMaxEclipseTime/60))\n",
     "# Actual Eclipse time will be smaller than this, as light bends over (among others...)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Util functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dB wrt milliwatt normally\n",
+    "def to_dBm(inWatts):\n",
+    "    return 10 * math.log10(inWatts/0.001)\n",
+    "\n",
+    "# dB wrt isotropic antenna\n",
+    "def to_dBi(inPower):\n",
+    "    return 10 * math.log10(inPower/1)\n",
+    "\n",
+    "iLightSpeed = 300_000_000 # meters / sec\n",
+    "\n",
+    "def wavelen2freq(waveLen):\n",
+    "    return iLightSpeed/waveLen\n",
+    "\n",
+    "def freq2wavelen(freq):\n",
+    "    return iLightSpeed/freq\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## RF Losses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TransmitPower(dBm): 26.989700043360187\n",
+      "Frequencies: [ 145800000  435000000  900000000 2400000000]\n",
+      "PowerAtReciever_Rough(dBm):\n",
+      " [[-102.70662271 -112.20125737 -118.51632242 -127.03569706]\n",
+      " [-108.72722262 -118.22185728 -124.53692233 -133.05629698]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using Friis transmission formula\n",
+    "# Pr = Pt * Dt * Dr * (Lambda/4*Pi*D)^2\n",
+    "# Pr_dBm = Pt_dBm + Dt_dBi + Dr_dBi + 10*log10((Lambda/4*Pi*D)^2)\n",
+    "# Pr_dBm = Pt_dBm + Dt_dBi + Dr_dBi + 20*log10(Lambda/4*Pi*D)\n",
+    "# Pr_dBm = Pt_dBm + Dt_dBi + Dr_dBi + 20*log10(Lambda) - 20*log10(D) - 20*log10(1/4*Pi)\n",
+    "#\n",
+    "powerTransmitter = 0.5 # Watts; this is what is normal for LEO AmSats\n",
+    "powerTransmitterDBm = to_dBm(powerTransmitter)\n",
+    "print(\"TransmitPower(dBm):\", powerTransmitterDBm)\n",
+    "directivityTransmitter = 1\n",
+    "directivityTransmitterDBi = to_dBi(directivityTransmitter)\n",
+    "directivityReciever = 1 # Change based on antenne system used\n",
+    "directivityRecieverDBi = to_dBi(directivityReciever)\n",
+    "frequencies = numpy.array([145_800_000, 435_000_000, 900_000_000, 2_400_000_000 ])\n",
+    "print(\"Frequencies:\", frequencies)\n",
+    "distances = numpy.array([[500_000],[1_000_000]])\n",
+    "\n",
+    "\n",
+    "# This doesnt consider any losses through_the/due_to medium of propagation, nor multipath, nor ...\n",
+    "# However as the path loss is the major factor given the distances involved, its used to get a rough feel\n",
+    "def freespace_pathloss(Pt_dBm, Dt_dBi, Dr_dBi, frequencies, distances):\n",
+    "    Pr_dBm = Pt_dBm + Dt_dBi + Dr_dBi + 20*numpy.log10(iLightSpeed/(4*numpy.pi*distances*frequencies))\n",
+    "    return Pr_dBm\n",
+    "\n",
+    "\n",
+    "powerRecieverDBm = freespace_pathloss(powerTransmitterDBm, directivityTransmitterDBi, directivityRecieverDBi,\n",
+    "                                       frequencies, distances)\n",
+    "print(\"PowerAtReciever_Rough(dBm):\\n\",powerRecieverDBm)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ToDo\n",
+    "Doppler effect\n"
    ]
   }
  ],
