--- a/MyAmSatInStem.ipynb
+++ b/MyAmSatInStem.ipynb
@@ -26,9 +26,11 @@
     "\n",
     "These are some initial thoughts in general, need to think/check\n",
     "\n",
-    "Below are few simple minded calculations to get a very very rough initial idea of few things. It is more simple geometry based and far removed from actual orbital characteristics. But still ...\n",
+    "Below are few simple minded calculations to get a very very rough initial idea of few things. It is more simple geometry and physics based and far removed from actual orbital characteristics. But still ...\n",
     "\n",
-    "Also I have nevered looked into satelite orbits and its implications before, on top these are my initial thoughts, that too with simple minded modeling, so take these with a big pinch of salt ;-)"
+    "Also I have nevered looked into satelite orbits and its implications before, on top these are my initial thoughts, that too with simple minded modeling, so take these with a big pinch of salt ;-)\n",
+    "\n",
+    "Thus this is a simple stupid look at some aspects of a possible amsat. It uses basic geometry and physics to try and get some rough estimates wrt velocity, orbital period, eclipse time, time to cover equatorial circumference fully, rf path loss, doppler drift ..."
    ]
   },
   {
